[package]
name = "typing"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.3"
actix-rt = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
actix-cors = "0.5.4"
tokio-postgres = "0.7.8"
tokio = { version = "1.28.2", features = ["full"] }

