[package]
name = "typing"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.3"
actix-rt = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
actix-cors = "0.5.4"
postgres = "0.17"
tokio-postgres = "0.7.8"
tokio = { version = "1.28.2", features = ["full"] }
dotenv = "0.15.0"
rand = "0.8"
sqlx = { version = "0.5.10", default-features = false, features = ["runtime-actix-native-tls", "postgres"] }
sqlx-postgres = "0.0.0"